/* Adjective */ +definitions, -stub notice <fair#37319>

--- a/wiki/fair.wikitext
+++ b/wiki/fair.wikitext
@@ -5,7 +5,12 @@
 
 ===Adjective===
 '''fair'''
-#{{substub}}
+#[[just]], [[equitable]]
+#:''a fair trial''
+#[[adequate]], [[reasonable]], or [[decent]]
+#:''The patient was in fair condition after some treatment.''
+#[[light]] in color or [[pale]], particularly as regards [[skin]] [[tone]]
+#[[pretty]] or [[attractive]], especially because of light skin
 
 ====Synonyms====
 *[[equitable]]
