/* Noun */  improved definition <fair#37319>

--- a/wiki/fair.wikitext
+++ b/wiki/fair.wikitext
@@ -42,7 +42,7 @@
 ===Noun===
 '''fair'''
 
-# a kind of community [[party]].
+# a community [[gathering]] to [[celebrate]] and [[exhibit]] local achievements
 
 ====Translations====
 * Danish: [[marked]] ''n''
