--- a/wiki/%E7%AB%8B.wikitext
+++ b/wiki/%E7%AB%8B.wikitext
@@ -13,14 +13,14 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#stand
+*# [[stand]]
 *# let stand
-*# establish, set
+*# [[establish]], [[set]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -32,15 +32,98 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': laap6
 
+===Compounds===
+*[[立案]]
+*[[立场]]
+*[[立春]]
+*[[立此存照]]
+*[[立刀旁儿]]
+*[[立刀儿]]
+*[[立等]]
+*[[立地]]
+*[[立定]]
+*[[立冬]]
+*[[立法]]
+*[[立方]]
+*[[立方根]]
+*[[立方米]]
+*[[立方体]]
+*[[立竿见影]]
+*[[立功]]
+*[[立功赎罪]]
+*[[立柜]]
+*[[立国]]
+*[[立即]]
+*[[立交]]
+*[[立交桥]]
+*[[立脚点]]
+*[[立决]]
+*[[立刻]]
+*[[立论]]
+*[[立马]]
+*[[立眉瞪眼]]
+*[[立米]]
+*[[立契]]
+*[[立秋]]
+*[[立身处世]]
+*[[立时]]
+*[[立时三刻]]
+*[[立誓]]
+*[[立陶宛]]
+*[[立体]]
+*[[立体电影]]
+*[[立体几何]]
+*[[立体交叉]]
+*[[立体角]]
+*[[立体声]]
+*[[立体图]]
+*[[立夏]]
+*[[立宪]]
+*[[立项]]
+*[[立像]]
+*[[立效]]
+*[[立言]]
+*[[立业]]
+*[[立异]]
+*[[立意]]
+*[[立约]]
+*[[立账]]
+*[[立正]]
+*[[立志]]
+*[[立轴]]
+*[[立锥之地]]
+*[[立字]], [[立字儿]]
+*[[立足]]
+*[[立足点]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[りつ]] (ritsu), [[りゅう]] (ryū)
 ** '''[[Kun]]''': [[たつ]] (tatsu), [[たてる]] (tateru), [[たちどころ]] (tachidokoro)
+
+===Compounds===
+*[[立夏]]
+*[[立脚]]
+*[[立憲]]
+*[[立候補]]
+*[[立秋]]
+*[[立春]]
+*[[立証]]
+*[[立体]]
+*[[立冬]]
+*[[立派]]
+*[[立腹]]
+*[[立方]]
+*[[立方体]]
+*[[立法]]
+*[[立礼]]
+*[[立会人]]
+*[[立場]]
 
 * '''Other info''':  
 
