wikipedia links <ACATS#64454>

--- a/wiki/ACATS.wikitext
+++ b/wiki/ACATS.wikitext
@@ -6,5 +6,6 @@
 ===See also===
 
 * [[Ada]]
+* [[wikipedia:Ada programming language]]
 * [[wikipedia:ISO 18009]]
 * http://www.ada-auth.org/acats.html
