--- a/wiki/knocker.wikitext
+++ b/wiki/knocker.wikitext
@@ -4,6 +4,10 @@
 '''knocker'''
 #device, usually hinged with a striking plate, used for [[knocking]] on a door
 #plural: '''knockers''' (''slang'') a woman's breasts
+#a person who [[knock]]s ([[denigrates]]) many things.
+
+==== Synonyms ====
+*''(a woman's breasts)'' - See [[WikiSaurus:breasts]]
 
 ====Translations====
 *Finnish: [[kolkutin]] (1); [[hinkit]] (''plural, slang'') (2)
