--- a/wiki/knocker.wikitext
+++ b/wiki/knocker.wikitext
@@ -4,7 +4,7 @@
 '''knocker'''
 #device, usually hinged with a striking plate, used for [[knocking]] on a door
 #plural: '''knockers''' (''slang'') a woman's breasts
-#a person who [[knock]]s ([[denigrates]]) many things.
+#a person who [[knock]]s ([[denigrate]]s) many things.
 
 ==== Synonyms ====
 *''(a woman's breasts)'' - See [[WikiSaurus:breasts]]
