--- a/wiki/shower.wikitext
+++ b/wiki/shower.wikitext
@@ -25,6 +25,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--right column-->
+*[[Polish]]: deszcz ''m'', kapuśniak ''m''
 |}
 |}
 
@@ -43,6 +44,7 @@
 {|
 <!--right column-->
 *Italian: [[doccia]] ''f''
+*[[Polish]]: prysznic ''m''
 |}
 |}
 
@@ -61,6 +63,7 @@
 {|
 <!--right column-->
 *Italian: [[doccia]] ''f''
+*[[Polish]]: prysznic ''m''
 |}
 |}
 
