--- a/wiki/icecream.wikitext
+++ b/wiki/icecream.wikitext
@@ -1,8 +1,1 @@
-
-*{{en}}: [[Ice cream]] [[:en:icecream|°]]
-*{{fr}}: [[glace]] [[:fr:glace|°]]
-*{{hu}}: [[fagylalt]] [[:hu:fagylalt|°]] 
-*{{de}}: [[Eiscreme]] [[:de:Eiscreme|°]]
-*{{it}}: [[gelato]] [[:it:gelato|°]]
-*{{pt}}: [[sorvete]] [[:pt:sorvete|°]]
-*{{es}}: [[helado]] [[:es:helado|°]]
+#REDIRECT [[ice cream]]
