/* Usage Notes */ <bosom#51053>

--- a/wiki/bosom.wikitext
+++ b/wiki/bosom.wikitext
@@ -7,8 +7,11 @@
 #:''The [[buxom]] [[wench]] had an [[ample]] bosom.''
 
 ===Usage Notes===
-*Considered a polite way to refer to a woman's breasts.
+*Considered a polite way to refer to a woman's [[breast]]s.
 *Means the chest collectively and cannot be used to refer to a single breast.
+
+====Synonyms====
+See [[WikiSaurus:breasts]]
 
 ====Translations====
 *German: der [[Busen]] ''n''
