/* Usage Notes */ <bosom#51053>

--- a/wiki/bosom.wikitext
+++ b/wiki/bosom.wikitext
@@ -6,7 +6,7 @@
 #:''In the book '''The Scarlet Letter''', the [[protagonist]] wears a red "A" on her chest, giving the author the excuse to mention her bosom 66 times.''
 #:''The [[buxom]] [[wench]] had an [[ample]] bosom.''
 
-===Usage Notes===
+====Usage Notes====
 *Considered a polite way to refer to a woman's [[breast]]s.
 *Means the chest collectively and cannot be used to refer to a single breast.
 
@@ -17,7 +17,7 @@ See [[WikiSaurus:breasts]]
 *German: der [[Busen]] ''n''
 *Slovene: [[prsi]] ''f pl'', [[prsa]] ''n pl'' (colloq.), [[nedra]] ''n pl'' (liter.)
 
-=====Adjective=====
+===Adjective===
 ''bosom'' (no [[comparative]] or [[superlative]] form)
 
 # Describes a very [[close]] [[relationship]].
