+headwords & derived <rebel#67033>

--- a/wiki/rebel.wikitext
+++ b/wiki/rebel.wikitext
@@ -1,6 +1,14 @@
 ==English==
 ===Noun===
+'''rebel''' ([[rebels]])
+
 #One who [[resist]]s an established [[authority]], usually [[violent]]ly.
 
 ===Verb===
+'''to rebel''' ([[rebels]], [[rebelled]], [[rebelling]])
+
 #To resist or become defiant toward an authority
+
+===Derived terms===
+*[[rebellion]]
+*[[rebellious]]
