fmt; some translations moved here from "icecream"; more syns; marked "creme glacé" as Canadian; +gender to de:; +fr:, it: & de: for second sense <ice cream#35950>

--- a/wiki/ice_cream.wikitext
+++ b/wiki/ice_cream.wikitext
@@ -11,31 +11,63 @@ Originally ''iced cream''.
 *[[ice-cream]]
 
 ===Noun===
-'''ice cream''' ([[uncountable]] and [[countable]]; plural: [[ice creams]])
+'''ice cream''' (''[[uncountable]] and [[countable]]''; ''plural'' '''[[ice creams]]''')
 
-# A [[dessert]] made from [[frozen]] [[sweeten]]ed [[cream]], usually [[flavor]]ed.
-# A snack consisting of ice cream (1) in a wafer cone.
+#(''uncountable'') A [[dessert]] made from [[frozen]] [[sweeten]]ed [[cream]] or a similar substance, usually [[flavor]]ed.
+#(''countable'') A snack consisting of ice cream (1) in a wafer cone.
 
 ====Synonyms====
-*[[iced cream]] (1)
-*[[ice cream cone]] (2)
+*(''dessert'') [[iced cream]] (''dated'')
+*(''in a wafer cone''): [[cone]], [[cornet]], [[ice cream cone]]
 
 ====Translations====
+
+'''dessert'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
 *Breton: [[skornenn]] ''f'' -où ''pl''
 *Catalan: [[gelat]] ''m''
 *Dutch: [[roomijs]] ''n'', [[ijs]] ''n'', [[ijsje]] ''n''
 *Finnish: [[jäätelö]]
-*French: [[glace]] ''f'', [[crème-glace]] ''f''
-*German: [[Eis]] ''n''
+*French: [[glace]] ''f'', [[crème glacé]] ''f'' (''Canada'')
+*German: [[Eis]] ''n'', [[Eiscreme]] ''f''
 *Greek: [[παγωτό]] ([[pagotó]]) ''n''
+*Hungarian: [[fagylalt]]
 *Italian: [[gelato]] ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
 *Lithuanian: [[ledai]] ''m, pl''
 *Persian: [[بستنی]] (bastani)
 *Polish: [[lody]] ''pl m''
+*Portuguese: [[sorvete]]
 *Slovak: [[zmrzlina#Slovak|zmrzlina]] ''f''
 *Spanish: [[helado]] ''m''
-*Swedish: [[glass]]
+*Swedish: [[glass#Swedish|glass]]
+|}
+|}
 
-===External Links===
+'''in a wafer cone'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: [[glace]] ''f'', [[crème glacé]] ''f'' (''Canada'')
+*German: [[Eistüte]] ''f''
+*Italian: [[gelato]] ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
 
-*[[wikipedia:en:Ice Cream|Wikipedia on Ice Cream]]
+===See also===
+*[[w:ice cream|Wikipedia article on ice cream]]
