fmt; modified defs; added example <metadrama#67063>

--- a/wiki/metadrama.wikitext
+++ b/wiki/metadrama.wikitext
@@ -1,1 +1,6 @@
-meta drama- a play with in a play
+==English==
+===Noun===
+'''metadrama''' (''uncountable'')
+
+#Of a play, the property featuring another play in its plot.
+#:''Shakespeare's "A Midsummer's Night Dream" is famous for its metadrama.''
