--- a/wiki/ice_cream.wikitext
+++ b/wiki/ice_cream.wikitext
@@ -1,7 +1,8 @@
+==English==
 ===Pronunciation===
 *[[AHD]]: īs'krēm
-*[[IPA]]: /ˈaɪskriːm/
-*[[SAMPA]]: /"aIskri:m/
+*[[IPA]]: /aɪsˈkriːm/
+*[[SAMPA]]: /<tt>aIs"kri:m</tt>/
 
 ===Etymology===
 
@@ -13,12 +14,12 @@ Originally ''iced cream''.
 ===Noun===
 '''ice cream''' (''[[uncountable]] and [[countable]]''; ''plural'' '''[[ice creams]]''')
 
-#(''uncountable'') A [[dessert]] made from [[frozen]] [[sweeten]]ed [[cream]] or a similar substance, usually [[flavor]]ed.
+#(''uncountable'') A [[dessert]] made from [[frozen]] [[sweeten]]ed [[cream]] or a similar substance, usually [[flavour]]ed.
 #(''countable'') A snack consisting of ice cream (1) in a wafer cone.
 
 ====Synonyms====
 *(''dessert'') [[iced cream]] (''dated'')
-*(''in a wafer cone''): [[cone]], [[cornet]], [[ice cream cone]]
+*(''in a wafer cone''): [[cone]], [[cornet]], [[ice cream cone]], [[ice-cream cornet]]
 
 ====Translations====
 
@@ -27,12 +28,12 @@ Originally ''iced cream''.
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from A to I here-->
 *Breton: [[skornenn]] ''f'' -où ''pl''
 *Catalan: [[gelat]] ''m''
+*Chinese: [[冰淇淋]]
 *Dutch: [[roomijs]] ''n'', [[ijs]] ''n'', [[ijsje]] ''n''
 *Finnish: [[jäätelö]]
-*French: [[glace]] ''f'', [[crème glacé]] ''f'' (''Canada'')
+*French: [[glace]] ''f'', [[crème glacée]] ''f'' (''Canada'')
 *German: [[Eis]] ''n'', [[Eiscreme]] ''f''
 *Greek: [[παγωτό]] ([[pagotó]]) ''n''
 *Hungarian: [[fagylalt]]
@@ -41,7 +42,7 @@ Originally ''iced cream''.
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from J to Z here-->
+*Japanese: [[アイスクリーム]]
 *Lithuanian: [[ledai]] ''m, pl''
 *Persian: [[بستنی]] (bastani)
 *Polish: [[lody]] ''pl m''
@@ -57,15 +58,13 @@ Originally ''iced cream''.
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from A to I here-->
-*French: [[glace]] ''f'', [[crème glacé]] ''f'' (''Canada'')
+*French: [[glace]] ''f'', [[crème glacée]] ''f'' (''Canada'')
 *German: [[Eistüte]] ''f''
-*Italian: [[gelato]] ''m''
+*Italian: [[cono]] gelato ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from J to Z here-->
 |}
 |}
 
