i believe old def was wrong; please improve this one though as i'm not a great writer (: <biker#67072>

--- a/wiki/biker.wikitext
+++ b/wiki/biker.wikitext
@@ -1,11 +1,19 @@
 ==English==
 ===Noun===
-'''biker'''
-#A person who rides [[bike]]s.
+'''biker''' ([[bikers]])
+
+#A person whose lifestyle is centered on [[motorcycle]]s, particularly a member of an [[outlaw]] motorcycle [[gang]].
+
+====Synonyms====
+*[[bikie]] (''Australia'', ''some hold that there is a distinction'')
+
 ====Translation====
-*{{fr}}: [[cycliste]] [[:fr:cycliste|°]]
-*{{hu}}: [[biciklista]] [[:hu:biciklista|°]] 
-*{{de}}: [[Radfahrer]] [[:de:Radfahrer|°]]
-*{{it}}: [[ciclista]] [[:it:ciclista|°]]
-*{{pt}}: [[ciclista]] [[:pt:ciclista|°]]
-*{{es}}: [[ciclista]] [[:es:ciclista|°]]
+*{{fr}}: [[cycliste]]
+*{{hu}}: [[biciklista]]
+*{{de}}: [[Radfahrer]]
+*{{it}}: [[ciclista]]
+*{{pt}}: [[ciclista]]
+*{{es}}: [[ciclista]]
+
+===See also===
+*[[trucker]]
