--- a/wiki/%CE%BF.wikitext
+++ b/wiki/%CE%BF.wikitext
@@ -1,8 +1,10 @@
 ==Greek==
-===Article===
+===Letter===
+====Homographs====
+*[[о]] (Cyrllic)
+*[[o]] (Latin)
+
+===Definite article===
 '''ο'''
 
 # [[the]] (''masculine form''; ''plural''  [[οι]])
-
-===See also===
-*[[o]] (Latin)
