reversed order of defs, as the "telephone call" one is the original one; modified defs slightly <wake-up call#67096>

--- a/wiki/wake-up_call.wikitext
+++ b/wiki/wake-up_call.wikitext
@@ -1,11 +1,8 @@
 ==English==
 ===Noun===
-'''wake-up call'''
-#an [[alert]], [[remind]]er, or call to [[action]]
-#:''The recent deaths should serve as a wake-up call to others at risk.''
-#A telephone call to awaken someone, especially when staying at a [[hotel]]
-#:''She requested a five a.m. wake-up call from the front desk.''
+'''[[wake up|wake-up]] [[call]]''' (''plural'' '''wake-up calls''')
 
-===See also===
-*[[call]]
-*[[wake]]
+#A telephone call to awaken someone at a certain time, especially one requested by the person while staying at a [[hotel]].
+#:''She requested a five a.m. wake-up call from the front desk.''
+#(''figuratively'') An [[alert]], [[reminder]], or call to [[action]] caused by a dramatic event.
+#:''The recent deaths should serve as a wake-up call to others at risk.''
