--- a/wiki/Bristol.wikitext
+++ b/wiki/Bristol.wikitext
@@ -9,5 +9,8 @@
 
 #(''[[Cockney rhyming slang]]''; ''usually in plural''; ''shortened from'' '''Bristol City''', ''the name of an English football team, for'' '''titty''') A woman's [[breast]].
 
+====Synonyms====
+See [[WikiSaurus:breasts]]
+
 ===See also===
 *[[w:Bristol|Wikipedia article on Bristol]]
