--- a/wiki/%CE%BF.wikitext
+++ b/wiki/%CE%BF.wikitext
@@ -1,5 +1,9 @@
 ==Greek==
 ===Letter===
+'''ο''', '''Ο'''
+
+# Letter of the Greek alphabet
+
 ====Homographs====
 *[[о]] (Cyrllic)
 *[[o]] (Latin)
@@ -8,3 +12,5 @@
 '''ο'''
 
 # [[the]] (''masculine form''; ''plural''  [[οι]])
+
+[[Category:Letters]]
