fmt; is the hebrew a genuinely used transliteration or was it invented for this article? <vandalism#40969>

--- a/wiki/vandalism.wikitext
+++ b/wiki/vandalism.wikitext
@@ -1,11 +1,13 @@
 ==English==
 ===Noun===
+'''vandalism''' (''uncountable'')
+
 #Needless damage or destruction of property, usually someone else's property or common or shared property.
 
 ====Translations====
 *Estonian: Vandalism
 *French: [[vandalisme]] ''m''
 *Hebrew: [[ונדליזם]] ''(Transliteration)''
-*Interlingua: [[vandalismo]]
+*[[Interlingua]]: [[vandalismo]]
 *Spanish: [[vandalismo]]
-*Volapük: [[vandalöm]]
+*[[Volapük]]: [[vandalöm]]
