--- a/wiki/planned_obsolescence.wikitext
+++ b/wiki/planned_obsolescence.wikitext
@@ -35,3 +35,6 @@ Planned obsolescence will also tend to benefit those companies with the most mod
 There is a tendency for people towards conservatism in their purchases, a predilection some economist believe to be excessive and harmful to the economy.  These economists would argue, for instance, that Microsoft's efforts to encourage consumers to move from [[Windows 95]] to [[Windows XP]] by withdrawing support and interoperability for the older operating system is a necessary corrective to people's natural aversion to change.
 
 everyone suks like crap
+== Headline text ==
+duh'''Bold text'''mua ha ha ha ha ''Italic text''googooo gagaga
+[http://www.example.com link title]google.ca
