rel -> ant; fr trans is m & f; put italics inside brackets <callipygian#40040>

--- a/wiki/callipygian.wikitext
+++ b/wiki/callipygian.wikitext
@@ -1,17 +1,17 @@
 ==English==
 ===Etymology=== 
-Ancient Greek '''[[καλλίπυγος]]''' ''(callipygos),'' from '''[[καλλι-]]''' ''(calli-,'' beautiful-) + '''[[πυγή]]''' ''(pyg&#275;,'' [[buttocks]]).
+Ancient Greek '''[[καλλίπυγος]]''' ''(callipygos),'' from '''[[καλλι-]]''' (''calli-'', beautiful-) + '''[[πυγή]]''' (''pyg&#275;'', [[buttocks]]).
 
 ===Adjective===
 '''callipygian'''
 
-# Having beautifully shaped buttocks.
+#Having beautifully shaped buttocks.
 
 ====Synonyms====
 *[[callipygous]]
 
-====Related words==== 
+====Antonyms==== 
 *[[cacopygian]]
 
 ====Translations====
-*{{fr}}: [[callypige]]
+*French: [[callypige]] ''m and f''
