--- a/wiki/planned_obsolescence.wikitext
+++ b/wiki/planned_obsolescence.wikitext
@@ -38,3 +38,4 @@ everyone suks like crap
 == Headline text ==
 duh'''Bold text'''mua ha ha ha ha ''Italic text''googooo gagaga
 [http://www.example.com link title]google.ca
+'''Bold text'''uaesfadfiwef weufhwiafhaiwlef''Italic text''adSAFDASFAFSFASASFFAAFSSAF
