--- a/wiki/pop_feminism.wikitext
+++ b/wiki/pop_feminism.wikitext
@@ -1,1 +1,2 @@
 Pop-Feminism is the belief that women are in all ways superior to men. The stereotype of a pop Feminist is the man hating woman who is violent and plans to destroy the male gender. Very few feminists are actually like this and many feminists happen to be men.
+{{rfc}}
