fmt; removed translations (check these are already at piles/h(a)emorrhoids) <aambei#99155>

--- a/wiki/aambei.wikitext
+++ b/wiki/aambei.wikitext
@@ -1,20 +1,5 @@
-===Afrikaans===
-
-====Selfstandige naamwoord====
+==Afrikaans==
+===Noun===
 '''aambei'''
 
-#Knobbelrige swelling in die onderste deel van die anus.
-
-{{-trans-}}
-{|border=0 width=100%
-|-
-|bgcolor="{{bgclr}}" valign=top width=48%|
-{|
-:*{{fr}}: [[hémorroïdes]]
-:*{{en}}: [[haemorrhoids]], [[piles]]
-:*{{de}}: [[Hämorrhoiden]]
-:*{{es}}: [[hemorroides]]
-:*{{it}}: [[emorroidi]]
-:*{{nl}}: [[aambeien]]
-|}
-|}
+#[[piles]], [[haemorrhoids]] (''UK''), [[hemorrhoids]]
