fmt; trans; syns <piles#73852>

--- a/wiki/piles.wikitext
+++ b/wiki/piles.wikitext
@@ -1,11 +1,39 @@
 ==English==
-===Plural Noun===
-'''piles'''
-#[[haemorrhoids]]
-#* Many women get '''piles''' when pregnant
-#A large [[amount]]
-#* He must earn '''piles''' of money
-#The [[plural]] of [[pile]].
-#* '''Piles''' were sunk into the river to support the bridge
+===Noun===
+'''piles''' ''plural''
+
+#Plural of '''[[pile]]'''.
+#:'''''Piles''' were sunk into the river to support the bridge.''
+#[[Haemorrhoids]].
+#:''Many women get '''piles''' when pregnant.''
+#(''informal:'' '''piles of''') A large [[amount]] of.
+#:''He must earn '''piles''' of money.''
+
+====Synonyms====
+*(''informal: a large amount of''): [[heap]]s of, [[load]]s of, [[mountain]]s of, [[shedload]]s of, [[ton]]s of
+
+====Translations====
+
+'''plural of pile'''
+''See'' '''[[pile]]'''
+
+'''haemorrhoids'''
+''See'' '''[[haemorrhoids]]'''
+
+'''informal: a large amount'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: des [[tas]] de ''m plural''
+*Italian: un [[mucchio]] di ''m singular'', un [[sacco]] di ''m singular''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
 
 [[nl:piles]]
