moved translations here from Afrikaans "aambei" and added Afrikaans; fixed it: trans <haemorrhoids#73853>

--- a/wiki/haemorrhoids.wikitext
+++ b/wiki/haemorrhoids.wikitext
@@ -2,14 +2,22 @@
 ===Alternative spellings===
 '''hemorroids''' (''US'')
 {{wikipedia}}
-===Plural noun===
-'''haemorrhoids'''
-#[[Piles]]; a [[pathological]] condition caused by painful masses of [[dilate]]d [[vein]]s in [[swollen]] [[anal]] [[tissue]].
+===Noun===
+'''haemorrhoids''' ''plural''
+#A [[pathological]] condition caused by painful masses of [[dilate]]d [[vein]]s in [[swollen]] [[anal]] [[tissue]].
 
-===={{trans}}====
-*Italian: [[emorroide]] {{f}}
+====Synonyms====
+*[[piles]]
+
+====Translations====
+*[[Afrikaans]]: [[aambei]]
+*Dutch: [[aambeien]]
+*French: [[hémorroïdes]] ''f plural''
+*German: [[Hämorrhoiden]]
+*Italian: [[emorroidi]] ''m plural''
 *[[Neapolitan]]: [[merròjde]], [[stummacale]], [[merruóieto]]
-* {{sv}} : [[hemorrojder]]
+*Spanish: [[hemorroides]]
+*Swedish : [[hemorrojder]]
 
 [[it:haemorrhoids]]
 [[nl:haemorrhoids]]
