marked as UK spelling <haemorrhoids#73853>

--- a/wiki/haemorrhoids.wikitext
+++ b/wiki/haemorrhoids.wikitext
@@ -3,7 +3,8 @@
 '''hemorroids''' (''US'')
 {{wikipedia}}
 ===Noun===
-'''haemorrhoids''' ''plural''
+'''haemorrhoids''' ''plural'' (''UK spelling'')
+
 #A [[pathological]] condition caused by painful masses of [[dilate]]d [[vein]]s in [[swollen]] [[anal]] [[tissue]].
 
 ====Synonyms====
