fmt; +plural; removed bad template <puzzola#75879>

--- a/wiki/puzzola.wikitext
+++ b/wiki/puzzola.wikitext
@@ -1,7 +1,8 @@
 ==Italian==
 ===Noun===
-'''puzzola''' {{f}}
-# [[skunk]]
+'''puzzola''' ''f'' (''plural'' '''puzzole''')
 
-{{-syn-}}
-:[[moffetta]]
+#[[skunk]]
+
+====Synonyms====
+*[[moffetta]]
