--- a/wiki/puzzola.wikitext
+++ b/wiki/puzzola.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 '''puzzola''' ''f'' (''plural'' '''puzzole''')
 
-#[[skunk]]
+#[[skunk]] (''animal'')
 
 ====Synonyms====
 *[[moffetta]]
