--- a/wiki/Welsh.wikitext
+++ b/wiki/Welsh.wikitext
@@ -21,7 +21,7 @@
 *[[Romanian]]: [[vel&#351;&#259;]], [[limba vel&#351;&#259;]] ''f''
 *[[Sasxsek]]: kxmrak
 *[[Slovak]]: [[Walešania]] ''m pl'' (1), [[waleština]] ''f'' (2)
-*[[Swedish]]: [[kymriska]], [[walesiska]]
+*[[Swedish]]: [[kymriska]], [[walesiska]], [[välska]]
 *[[Welsh]]: [[Cymraeg]]. Mutations: [[Gymraeg]]
 
 ==Adjective==
