fmt; +"strong" to marijuana def; +some translations of mammal sense from Wikipedia <skunk#38269>

--- a/wiki/skunk.wikitext
+++ b/wiki/skunk.wikitext
@@ -2,29 +2,59 @@
 ==English==
 [[Category:English mammals]]
 ===Noun===
-'''skunk''' (plural: '''skunks''')
+'''skunk''' (''plural'' '''skunks''')
 
-# A small mammal [[native]] to North America. Black with a white stripe and famous for emitting a [[noxious]] smell as a defensive measure.
-# (''Slang'') [[marijuana]]
+# A small mammal [[native]] to North America, black with a white stripe and famous for emitting a [[noxious]] smell as a defensive measure.
+# (''slang'') A type of strong [[marijuana]].
 
 ====Translations====
+'''animal'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
 *[[Chumash]] (Inezeño): [[taxama]]
+*[[Esperanto]]: [[mefito]]
 *French: moufette ''f''
-*Spanish '''mofeta'''
-*Swedish: [[skunk#Swedish|skunk]] ''c'' (1)
+*Hebrew: [[בואשיים]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+*Spanish: mofeta
+*Swedish: [[skunk#Swedish|skunk]] ''c''
+|}
+|}
 
-===See Also===
-*[[Mephitidae]]
-*[[Mephitis]]
-*[[Spilogale]] 
-*[[Conepatus]]
+'''slang: marijuana'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+===See also===
+*''[[Mephitidae]]''
+*''[[Mephitis]]''
+*''[[Spilogale]]''
+*''[[Conepatus]]''
 *[[polecat]]
 
 [[Category:Algonquian derivations]]
 
+----
 ==Swedish==
 [[Category:sv:Mammals]]
 ===Noun===
-'''skunk''' (plural: '''skunks''')
+'''skunk''' (''plural'' '''skunks''')
 
-# skunk
+#skunk
