--- a/wiki/ununbium.wikitext
+++ b/wiki/ununbium.wikitext
@@ -5,7 +5,7 @@
 === Noun ===
 '''ununbium''' ([[w:Ununbium|Wikipedia:Ununbium]])
 
-# a temporary name for the chemical element with [[atomic number]] 112 (''symbol'' Uub).
+# the [[systematic element name]] for the chemical element with [[atomic number]] 112 (''symbol'' Uub).
 
 ==== Translations ====
 {| border=0  width=100%
