--- a/wiki/ununtrium.wikitext
+++ b/wiki/ununtrium.wikitext
@@ -1,11 +1,11 @@
 *'''Chemical element''': '''Uut''' (Atomic Number: 113)
-**Last: [[Ununbium|Uub]]
+**Previous: [[Ununbium|Uub]]
 **Next: [[Ununquadium|Uuq]]
 ----
 == Noun ==
 '''ununtrium''' ([[w:Ununtrium|Wikipedia:Ununtrium]])
 
-# a temporary name for the (as yet unconfirmed) chemical element with [[atomic number]] 113 (''symbol'' Uut).
+# the [[systematic element name]] for the (as yet unconfirmed) chemical element with [[atomic number]] 113 (''symbol'' Uut).
 
 ===Translations===
 {| border=0  width=100%
