--- a/wiki/ununquadium.wikitext
+++ b/wiki/ununquadium.wikitext
@@ -1,11 +1,11 @@
 *'''Chemical element''': '''Uuq''' (Atomic Number: 114)
-**Last: [[Ununtrium|Uut]]
+**Previous: [[Ununtrium|Uut]]
 **Next: [[Ununpentium|Uup]]
 ----
 == Noun ==
 '''ununquadium''' ([[w:Ununquadium|Wikipedia:Ununquadium]])
 
-# a temporary name for the (as yet unconfirmed, but also uncontested) chemical element with [[atomic number]] 114 (''symbol'' Uuq).
+# the [[systematic element name]] for the (as yet unconfirmed, but also uncontested) chemical element with [[atomic number]] 114 (''symbol'' Uuq).
 
 ===Translations===
 {| border=0  width=100%
