--- a/wiki/ununpentium.wikitext
+++ b/wiki/ununpentium.wikitext
@@ -1,11 +1,11 @@
 *'''Chemical element''': '''Uup''' (Atomic Number: 115)
-**Last: [[Ununquadium|Uuq]]
+**Previous: [[Ununquadium|Uuq]]
 **Next: [[Ununhexium|Uuh]]
 ----
 == Noun ==
 '''ununpentium''' ([[w:Ununpentium|Wikipedia:Ununpentium]])
 
-# a temporary name for the (as yet unconfirmed) chemical element with [[atomic number]] 115 (''symbol'' Uup).
+# the [[systematic element name]] for the (as yet unconfirmed) chemical element with [[atomic number]] 115 (''symbol'' Uup).
 
 ===Translations===
 {| border=0  width=100%
