--- a/wiki/ununhexium.wikitext
+++ b/wiki/ununhexium.wikitext
@@ -1,11 +1,11 @@
 *'''Chemical element''': '''Uuh''' (Atomic Number: 116)
-**Last: [[Ununpentium|Uup]]
+**Previous: [[Ununpentium|Uup]]
 **Next: [[Ununseptium|Uus]]
 ----
 == Noun ==
 '''ununhexium''' ([[w:Ununhexium|Wikipedia:Ununhexium]])
 
-# a temporary name for the (as yet undiscovered) chemical element with [[atomic number]] 116 (''symbol'' Uuh).
+# the [[systematic element name]] for the (as yet undiscovered) chemical element with [[atomic number]] 116 (''symbol'' Uuh).
 
 ===Translations===
 {| border=0  width=100%
