fmt; rejigged rel/der/see also; +"-bi-" <bi-#42452>

--- a/wiki/bi-.wikitext
+++ b/wiki/bi-.wikitext
@@ -5,13 +5,14 @@
 #[[two]]
 
 ====Etymology====
-From {{L.}} [[bis]] twice
+From {{L.}} ''[[bis]]'', twice
 
 ====Translations====
 *French: bi-
 *Italian: bi-
 
-====Related terms====
+====Derived terms====
+*[[bi]]
 *[[biannual]]
 *[[biceps]]
 *[[bicycle]]
@@ -30,16 +31,18 @@ From {{L.}} [[bis]] twice
 *[[biweekly]]
 
 ====See also====
-*[[bi]]
+*[[-bi-]]<!--affix in chemistry-->
 *[[di-]]
 *[[duo-]]
 
+----
 ==French==
 ===Prefix===
 '''bi-'''
 
 #bi-
 
+----
 ==Italian==
 ===Prefix===
 '''bi-'''
