--- a/wiki/ununseptium.wikitext
+++ b/wiki/ununseptium.wikitext
@@ -1,11 +1,11 @@
 *'''Chemical element''': '''Uus''' (Atomic Number: 117)
-**Last: [[Ununhexium|Uuh]]
+**Previous: [[Ununhexium|Uuh]]
 **Next: [[Ununoctium|Uuo]]
 ----
 == Noun ==
 '''ununseptium''' ([[w:Ununseptium|Wikipedia:Ununseptium]])
 
-# a temporary name for the (as yet undiscovered) chemical element with [[atomic number]] 117 (''symbol'' Uus).
+# the [[systematic element name]] for the (as yet undiscovered) chemical element with [[atomic number]] 117 (''symbol'' Uus).
 
 ===Translations===
 {| border=0  width=100%
