--- a/wiki/ununoctium.wikitext
+++ b/wiki/ununoctium.wikitext
@@ -5,7 +5,7 @@
 === Noun ===
 '''ununoctium''' ([[w:Ununoctium|Wikipedia:Ununoctium]])
 
-# a temporary name for the (as yet undiscovered) chemical element with [[atomic number]] 118 (''symbol'' Uuo).
+# the [[systematic element name]] for the (as yet undiscovered) chemical element with [[atomic number]] 118 (''symbol'' Uuo).
 
 ==== Translations ====
 {| border=0  width=100%
