--- a/wiki/ununennium.wikitext
+++ b/wiki/ununennium.wikitext
@@ -1,11 +1,11 @@
 *'''Chemical element''': '''Uue''' (Atomic Number: 119)
-**Last: [[Ununoctium|Uuo]]
+**Previous: [[Ununoctium|Uuo]]
 **Next: [[Unbinilium|Ubn]]
 ----
 == Noun ==
 '''ununennium''' ([[w:Ununennium|Wikipedia:Ununennium]])
 
-# a temporary name for the (as yet undiscovered) chemical element with an [[atomic number]] of 119 (''symbol'' Uue).
+# the [[systematic element name]] for the (as yet undiscovered) chemical element with an [[atomic number]] of 119 (''symbol'' Uue).
 
 ===Translations===
 {| border=0  width=100%
