--- a/wiki/zen.wikitext
+++ b/wiki/zen.wikitext
@@ -6,6 +6,7 @@
 __TOC__
 
 ==Spread of Zen==
+
 Traditionally, Zen traces its roots back to [[Indian Buddhism]], where it was known by "[[dhyana|dhy&#257;na]]" (&#2343;&#2381;&#2351;&#2366;&#2344;), a [[Sanskrit]] term for meditation. This name was [[transliterate]]d into [[Chinese]] as ''[[Chan|Ch&aacute;n]]'' (&#31146; / simplified &#31109;); "Ch&aacute;n" was later borrowed into [[Korean language|Korean]] as ''[[Seon]]'', [[Vietnamese language|Vietnamese]] as ''[[Thien|Thi&#7873;n]]'' and  into Japanese as "Zen."
 
 According to traditional accounts, Zen was founded in China by a [[Central Asian]] or [[Indian]] Buddhist monk, [[Bodhidharma]] ([[Daruma]] in Japanese). He was the 28th in the line of transmission from the Buddha's disciple [[Kasyapa]]. He traveled from Conjeeveram, near [[Madras]] (now Chennai), India, to [[Guangzhou]] (Canton), China in 520 [[CE]], where he met the Liang-dynasty (502-557) emperor Wudi and had a famous exchange declaring that good deeds were useless (conferred no [[merit]]) for gaining [[enlightenment]]. He then went to a monastery near [[Luoyang]] in eastern China and, according to legend, spent nine years meditating before a cliff wall before accepting any disciples.
@@ -73,9 +74,12 @@ It is important to note, however, that Chan, Seon and Zen continued to develop s
 The Japanese [[Rinzai]] Zen scholar [[D.T. Suzuki]] maintained that a Zen ''[[satori]]'' (awakening) was the goal of the training, but that what distinguished the tradition as it developed in China, Korea, and Japan was a way of life radically different from that of Indian Buddhists. In India, the tradition of the [[mendicant]] (holy beggar, or [[bhikku]] in [[Pali]]) prevailed, but in China social circumstances led to the development of a temple and training-center system in which the abbot and the monks all performed mundane tasks. These included food gardening or farming, carpentry, architecture, housekeeping, administration, and the practice of folk medicine. Consequently, the enlightenment sought in Zen had to stand up well to the demands and potential frustrations of everyday life.
 
 ==Zen in Japan==
+
 The following Zen traditions still exist in Japan: [[Rinzai]], [[Soto]], and [[Obaku School|Obaku]].  Originally formulated by the [[eponym]]ous Chinese master [[Linji]] (Rinzai in Japanese), the Rinzai school was introduced to [[Japan]] in [[1191]] by [[Eisai]]. [[Dogen]], who studied under Eisai, would later carry the [[Caodong]], or "Soto" Zen school to Japan from [[China]].  Obaku was introduced in the [[17th century]] by [[Ingen]], a Chinese monk.
 
 Some contemporary Japanese Zen teachers, such as [[Daiun Harada]] and [[Shunryu Suzuki]] have criticized Japanese Zen as being a formalized system of empty rituals with very few Zen practitioners ever actually ''attaining'' realization.  They assert that almost all Japanese temples have become family businesses handed down from father to son, and the Zen priest's function has largely been reduced to officiating at funerals.
+
+Zen is also associated with [[Japanese tea ceremony]].
 
 ==Zen and Buddhism==
 Zen is considered by some as not necessarily a [[Buddhist]] religion as a number of non-Buddhists, particularly Christians, have been formally acknowledged as [[Zen master]]s.  Zen is often described as a ''way of life'' not dependent on one's particular culture. 
@@ -123,7 +127,8 @@ Some schools such as the Kwan Um publish lists of their teachers. The American Z
 Of course even formal authorization should not be considered "enough." The moral lapses of any number of contemporary Zen teachers should be a warning in this regard. As the relationship between a teacher and a student requires complete intimacy and a profound trust on the part of the student, any one seriously considering studying with a Zen teacher should read widely about the prospective teacher, ask people who've studied Zen for some years, do web searches, and perhaps most importantly look closely at the teacher's students. Much can be discovered in such simple acts.
 
 ===Koan practice===
-[[Image:Wu (negative).png|130px|left|thumb|[[Chinese character]] for ''wú'' ([[Japanese language|Japanese]]: ''mu'').]]
+[[Image:Wu (negative).png|130px|left|thumb|[[Chinese character]] for "nothing."  [[Chinese language|Chinese]]: ''wú'' ([[Japanese language|Japanese]]: ''mu'').]]
+
 The Zen schools (especially but not exclusively Rinzai) are associated 
 with [[koan|koans]] (Japanese; Chinese: gongan; Korean: gong'an).  The 
 term originally referred to legal cases in 
