+see also -tri- <tri-#42116>

--- a/wiki/tri-.wikitext
+++ b/wiki/tri-.wikitext
@@ -18,7 +18,7 @@ From {{L.}} [[tres]] three and {{Gr.}} [[]] three
 *[[triangle]]
 *[[triangular]]
 *[[triangulate]]
-*[[triannually]]
+*[[triannual]]
 *[[triathlete]]
 *[[triathlon]]
 *[[tribune]]
@@ -44,7 +44,7 @@ From {{L.}} [[tres]] three and {{Gr.}} [[]] three
 *[[trimester]]
 *[[trimillennial]]
 *[[trinitarian]]
-*[[trinitrotoluene]] etc
+*[[trinitrotoluene]]
 *[[trinity]]
 *[[trinomial]]
 *[[trio]]
@@ -62,11 +62,12 @@ From {{L.}} [[tres]] three and {{Gr.}} [[]] three
 *[[triumvirate]]
 *[[trivia]]
 
-====See also====
-*[[tre-]], [[ter-]]
+===See also===
+*[[tre-]]
+*[[ter-]]
+*[[-tri-]]
 
 ----
-
 ==French==
 ===Prefix===
 '''tri-'''
@@ -96,7 +97,6 @@ From {{L.}} [[tres]] three and {{Gr.}} [[]] three
 *[[trois]]
 
 ----
-
 ==Italian==
 ===Prefix===
 '''tri-'''
@@ -105,7 +105,7 @@ From {{L.}} [[tres]] three and {{Gr.}} [[]] three
 
 ===Related terms===
 *[[triangolo]]
-*[[triathlon]], [[triatlon]]
+*[[triathlon#Italian|triathlon]], [[triatlon]]
 *[[triatomico]]
 *[[triceratopo]]
 *[[triciclo]]
