--- a/wiki/twice.wikitext
+++ b/wiki/twice.wikitext
@@ -1,6 +1,7 @@
-==[[Adverb]]==
-
-# two times
+==English==
+===Adverb===
+'''twice'''
+# [[two]] [[times]]
 
 ===Translations===
 *[[Catalan]]: [[dos]] [[cops]], [[dues]] [[vegades]]
@@ -10,6 +11,7 @@
 *[[German]]: [[zweimal]]
 *[[Greek]]: [[δυ&#972;]] [[φορές]]
 *[[Italian]]: [[due]] [[volte]]
+*[[Latin]]: [[bis]]
 *[[Portuguese]]: [[duas]] [[vezes]]
 *[[Spanish]]: [[dos]] [[veces]]
 
