--- a/wiki/tri-.wikitext
+++ b/wiki/tri-.wikitext
@@ -1,6 +1,7 @@
 ==English==
 ====Etymology====
-From {{L.}} [[tres]] three and {{Gr.}} [[]] three
+From {{L.}} ''[[tres]]'', three, and {{Gr.}} ''[[]]'', three
+
 ===Prefix===
 [[Category:English prefixes]]
 '''tri-'''
