+more see also <quad#83571>

--- a/wiki/quad.wikitext
+++ b/wiki/quad.wikitext
@@ -3,7 +3,7 @@
 '''quad''' (''plural'' '''quads''')
 
 #(''informal'') A [[quadrangle]] (''courtyard'').
-#(''informal'') A [[quadruplet]].
+#(''informal'') A [[quadruplet]] (''infant'').
 
 ===Related terms===
 *[[quad bike]]
