+plural & see also <hex#60412>

--- a/wiki/hex.wikitext
+++ b/wiki/hex.wikitext
@@ -1,7 +1,9 @@
 ==English==
-
 ===Noun===
-
-'''hex'''
+'''hex''' (''plural'' '''hexes''')
 
 #An evil spell or curse.
+
+===See also===
+*[[hex-]]
+*[[-hex-]]
