der -> rel <bi-#42452>

--- a/wiki/bi-.wikitext
+++ b/wiki/bi-.wikitext
@@ -11,7 +11,7 @@ From {{L.}} ''[[bis]]'', twice
 *French: bi-
 *Italian: bi-
 
-====Derived terms====
+====Related terms====
 *[[bi]]
 *[[biannual]]
 *[[biceps]]
