+m/f to "trev/shazza"; +redneck <chav#64913>

--- a/wiki/chav.wikitext
+++ b/wiki/chav.wikitext
@@ -32,7 +32,7 @@ The etymology is disputed:
 *[[chavalanche]]
 
 ===See also===
-''Similar pejoratives, but not having the same meaning'':
+''Pejoratives with similar meanings:''
 *[[bam]]
 *[[bazza]]
 *[[benny]]
@@ -40,7 +40,7 @@ The etymology is disputed:
 *[[bopper]]
 *[[brush]]
 *[[chaddite]]
-*[[charva]] (North-East England)
+*[[charva]] (''North-East England'')
 *[[charver]]
 *[[chavalier]]
 *[[chavette]]
@@ -67,6 +67,7 @@ The etymology is disputed:
 *[[punk-boy]]
 *[[radgie]]
 *[[ratboy]]
+*[[redneck]] (''United States'')
 *[[rudeboy]]
 *[[rudie]]
 *[[scally]]
@@ -90,7 +91,7 @@ The etymology is disputed:
 *[[townie]]
 *[[trailer trash]] (''United States'')
 *[[trainee smackhead]]
-*[[trev]]/[[shazza]] (''Oxfordshire, particularly [[Wikipedia:Abingdon School|Abingdon School]] internal culture'', note the gender-specificity)
+*[[trev]] (''male'')/[[shazza]] (''female'') (''Oxfordshire, particularly [[Wikipedia:Abingdon School|Abingdon School]] internal culture''; note the gender-specificity)
 *[[vic]]
 *[[wah]]
 *[[Westie]] (''Australia, New Zealand'')
