expanded a bit <come down to#99214>

--- a/wiki/come_down_to.wikitext
+++ b/wiki/come_down_to.wikitext
@@ -5,6 +5,9 @@
 #:''Wait for the temperature to '''come down to''' a reasonable level before touching the lid.''
 #{{idiom}} to [[depend]] upon, [[basically]], [[ultimately]] or in [[essence]]
 #:''The decision '''comes down to''' whether you really want to pay that much for a little extra convenience.''
+#:''The game is going to '''come down to''' the last five seconds.''
+# to [[travel]] to or [[visit]]
+#:'''''Come down to''' my place someday and have lunch.''
 
 ===See also===
 *[[boil down]]
