--- a/wiki/blockbuster.wikitext
+++ b/wiki/blockbuster.wikitext
@@ -1,12 +1,16 @@
-blockbuster (noun) blŏk'bŭs'tər
+==English==
+===Noun===
 
-1. A high-explosive bomb used for the purposes of demolishing extensive areas, such as a city block.
+'''blockbuster''' /blŏk'bŭs'tər/
 
-2. Something, such as a film or book, that sustains exceptional and widespread popularity and achieves enormous sales.
+# A high-explosive [[bomb]] used for the purposes of demolishing extensive areas, such as a [[city]] block.
 
+# Something, such as a [[film]] or [[book]], that sustains exceptional and widespread popularity and achieves enormous sales.
 
 
 ----
+{{wikipedia}}
+
 Related terms
 
 [[blockbust]] (verb form)
