--- a/wiki/English.wikitext
+++ b/wiki/English.wikitext
@@ -235,6 +235,7 @@ From Old English '''[[Englisc]]''', from '''[[Engle]]''' ("the [[Angles]]," a Ge
 
 * [[w:English language|English language]] (Wikipedia)
 
+[[fr:English]]
 [[gu:English]]
 [[hi:English]]
 [[it:English]]
