--- a/wiki/home.wikitext
+++ b/wiki/home.wikitext
@@ -31,7 +31,7 @@
 *Estonian: [[kodu]]
 *Finnish: [[koti]] (1, 2, 3, 4, 5, 6), [[kotiseutu]] (2),[[pesä]] (7a)
 *German: 1.,6. [[Heim]] ''n'', 2.,5. [[Heimat]], ''f'' 3., 4. [[Zuhause]] ''n'',
-*Hungarian: hÃz; haz
+*{{hu1|otthon}}
 *[[Ido]]: [[hemo]]
 *Kurdish: [[mal]]
 *Punjabi: [[ਘਰ]]
