===Related terms=== <blockbuster#99216>

--- a/wiki/blockbuster.wikitext
+++ b/wiki/blockbuster.wikitext
@@ -7,14 +7,10 @@
 
 # Something, such as a [[film]] or [[book]], that sustains exceptional and widespread popularity and achieves enormous sales.
 
+===Related terms===
 
+* [[blockbust]] (verb form)
+* [[block]]
+* [[bust]]
 ----
 {{wikipedia}}
-
-Related terms
-
-[[blockbust]] (verb form)
-
-[[block]]
-
-[[bust]]
