--- a/wiki/flick_off.wikitext
+++ b/wiki/flick_off.wikitext
@@ -1,6 +1,8 @@
-== Verb ==
-1. To [[flick off]] someone is to [[insult]] them by showing them the middle finger, at least in most english speaking countries.
+== English ==
+=== Verb ===
+#to [[flick off]] someone is to [[insult]] them by showing them the middle finger in some english speaking countries.
 
-== See Also ==
+=== Related terms ===
 *[[flip off]]
 *[[flip the bird]]
+{{cleanup}}
