<at sixes and sevens#95117>

--- a/wiki/at_sixes_and_sevens.wikitext
+++ b/wiki/at_sixes_and_sevens.wikitext
@@ -2,7 +2,7 @@
 === Adjectival Phrase ===
 '''at sixes and sevens'''
 # {{idiom}} in a [[state]] of [[confusion]]
-#: ''The house was in utter disarray, the furnature all '''at sixes and sevens'''; it was as though a tornado had blown through.''
+#: ''The house was in utter disarray, the furniture all '''at sixes and sevens'''; it was as though a tornado had blown through.''
 # (''when of two people or groups'') in [[dispute]]; in [[disagreement]]
 #: ''Mother and Father were '''at sixes and sevens''' about whether or not to let Johnny attend the party; Mother was concerned for his safety while Father simply wanted him out of the house.''
 
