--- a/wiki/flick_off.wikitext
+++ b/wiki/flick_off.wikitext
@@ -1,5 +1,6 @@
 == English ==
 === Verb ===
+'''to flick off'''
 #to [[flick off]] someone is to [[insult]] them by showing them the middle finger in some english speaking countries.
 
 === Related terms ===
