--- a/wiki/blockbuster.wikitext
+++ b/wiki/blockbuster.wikitext
@@ -4,8 +4,8 @@
 '''blockbuster''' /blŏk'bŭs'tər/
 
 # A high-explosive [[bomb]] used for the purposes of demolishing extensive areas, such as a [[city]] block.
-
 # Something, such as a [[film]] or [[book]], that sustains exceptional and widespread popularity and achieves enormous sales.
+# An exceptional event: ''a blockbuster trade in baseball''.
 
 ===Related terms===
 
