--- a/wiki/blockbuster.wikitext
+++ b/wiki/blockbuster.wikitext
@@ -5,6 +5,8 @@
 
 # A high-explosive [[bomb]] used for the purposes of demolishing extensive areas, such as a [[city]] block.
 # Something, such as a [[film]] or [[book]], that sustains exceptional and widespread popularity and achieves enormous sales.
+
+==Adjective==
 # An exceptional event: ''a blockbuster trade in baseball''.
 
 ===Related terms===
