--- a/wiki/gynogenetically.wikitext
+++ b/wiki/gynogenetically.wikitext
@@ -1,2 +1,4 @@
+== English ==
 ===Adverb===
-# process whereby a [[sperm]] fertilizes an [[ovum]], but does not contribute [[genetic]] material to the resultant [[zygote]]
+'''gynogenetically'''
+# the process whereby a [[sperm]] fertilizes an [[ovum]], but does not contribute [[genetic]] material to the resultant [[zygote]]
