wikify, link to wikipedia <ballot#99226>

--- a/wiki/ballot.wikitext
+++ b/wiki/ballot.wikitext
@@ -1,2 +1,14 @@
-== Noun ==
-1. The document which accounts for a [[vote]], on a specific [[poll]] (a ''national election''). Usually carried out at a [[polling station]].
+==English==
+===Etymology===
+Italian ''ballotta'', a small ball used to register a vote
+===Noun===
+{{wikipedia}}
+'''ballot'''
+# a [[paper]] or [[card]] used to [[cast]] a [[vote]]
+# the [[process]] of [[voting]], especially in [[secret]]
+#(''mostly US'') a [[list]] of [[candidate]]s [[running]] for [[office]]; a [[ticket]]
+# the [[total]] of all votes cast in an [[election]]
+===Intransitive verb===
+'''to ballot'''
+# to [[vote]]
+# to [[draw]] [[lots]]
