wikify and expand <polling#99227>

--- a/wiki/polling.wikitext
+++ b/wiki/polling.wikitext
@@ -1,6 +1,8 @@
-== English ==
-=== Adverb ===
+==English==
+===Verb form===
 '''polling'''
-#the act of taking a [[poll]].
-
-{{cleanup}}
+# [[present participle]] of the verb '''to [[poll]]'''
+===Verbal noun===
+'''polling'''
+# the action of taking a poll
+#{{computing}} A [[technique]] that [[continually]] [[interrogate]]s a [[peripheral]] [[device]] to see if it has [[data]] to [[transfer]]
