--- a/wiki/bifocals.wikitext
+++ b/wiki/bifocals.wikitext
@@ -1,6 +1,4 @@
-== English ==
-=== Noun ===
+==English==
+===Noun===
 '''bifocals'''
-#a pair of reading glasses that let the user who is both near sighted and far sighted be able to use the function of far sighted focals for reading and seeing closely, then also to use the near sighted functionality for reading far signs and objects.
-
-{{cleanup}}
+# [[spectacles]] that have [[corrective]] [[lens]]es of two [[different]] [[power]]s; used by people who need both [[distance]] and [[reading]] [[glasses]]
